<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#081230"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="231dp"
        android:layout_height="252dp"
        android:contentDescription="Logo Image"
        android:layout_marginBottom="10dp"
        android:src="@drawable/moon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/letsolat"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/welcome_to_letsolat_your_prayer_companion"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:tint="@color/buttonColor"
        android:text="@string/let_s_get_started" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:tint="@color/buttonColor"
        android:text="@string/log_out" />

</LinearLayout>