<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#081230"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="198dp"
        android:layout_height="169dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="Logo Image"
        android:src="@drawable/moon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#777474"
                android:backgroundTint="#B6B6B6"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="#777474" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#777474"
                android:backgroundTint="#B6B6B6"
                android:textColor="@color/white"
                android:textColorHint="#777474"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:text="Remember Me" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="onForgotPasswordClick"
            android:text="Forgot Password?"
            android:textColor="#0919AA" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@color/buttonColor"
            android:text="@string/login"
            android:textColor="@color/white"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="Don't have an account? Sign Up"
        android:textColor="#FFC107"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>


